--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react-icons": "^5.5.0",
     "react-intersection-observer": "^9.16.0",
     "react-parallax-tilt": "^1.7.308",
+    "swiper": "^12.0.1",
     "tailwindcss": "^4.1.13",
     "three": "^0.180.0",
     "vanta": "^0.5.24"
